--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ addons:
   sonarcloud:
     organization: "marcosrmartini-github"
     token:
-      secure: "d2f520b46e01cdec5f17be79d7a03b323e71d8f3" # encrypted value of your token
+      secure: 7b4c85d43fe42eb595179a988f652cfb103ec14a # encrypted value of your token
 
 script:
-  #  the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
