--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ addons:
   sonarcloud:
     organization: "marcosrmartini-github"
     token:
-      secure: 7b4c85d43fe42eb595179a988f652cfb103ec14a # encrypted value of your token
+      secure: 0a7f4a2728cdddc3e856ddfe1d4ea37a3bd3002f # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=desafio_bhut
